src/index.css
/* Default */
*{
    padding:0;
    margin:0;
    box-sizing: border-box;
}
body{
    position: relative;
    min-height:100vh;
    display: flex;
    flex-direction: column;
    min-width:300px;
    background-color: #888888;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23888888' cx='50' cy='0' r='50'/%3E%3Cg fill='%23818181' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%237a7a7a' cx='50' cy='100' r='50'/%3E%3Cg fill='%23727272' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%236b6b6b' cx='50' cy='200' r='50'/%3E%3Cg fill='%23646464' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%235d5d5d' cx='50' cy='300' r='50'/%3E%3Cg fill='%23575757' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%23505050' cx='50' cy='400' r='50'/%3E%3Cg fill='%23494949' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%23434343' cx='50' cy='500' r='50'/%3E%3Cg fill='%233c3c3c' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%23363636' cx='50' cy='600' r='50'/%3E%3Cg fill='%23303030' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%232a2a2a' cx='50' cy='700' r='50'/%3E%3Cg fill='%23242424' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%231e1e1e' cx='50' cy='800' r='50'/%3E%3Cg fill='%23191919' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23121212' cx='50' cy='900' r='50'/%3E%3Cg fill='%230a0a0a' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23000000' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: contain;
}
.no-select{
    -webkit-touch-callout:none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

/* Navbar */
header{
    display:flex;
    position: relative;
    z-index:1;
}
.navbar{
    font-size: 30px;
    position: relative;
    background: black;
    display:flex;
    width:100%;
    z-index:0;
}
.navbar .links{
    display: flex;
    list-style: none;
    height:100%;
}
.navbar .links>li{
    display: flex;
    height:100%;
}
.navbar .links>li>a,
.navbar .links>li>.link{
    height:100%;
    padding: 7px 25px;
    text-decoration: none;
    color:white;
    position: relative;
    z-index: 1;
}
.navbar .links>li>a:hover,
.navbar .links>li>.link:hover{
    color:gray;
    cursor:pointer;
}

/* Submenus */
.submenu{
    font-size: 25px;
    display:flex;
    position: absolute;
    top:-1000px;
    z-index: 0;
    background:black;
    border-radius: 10px;
}
.submenu.show{
    position: absolute;
    top:0;
    padding-top:50px;
    margin-left:15px;
}
.submenu>ul{
    display: flex;
    flex-direction: column;
    list-style: none;
    height:100%;
}
.submenu>ul>li>a{
    display: flex;
    color:white;
    text-decoration: none;
    padding: 4px 10px;
}
.submenu>ul>li:last-child>a{
    padding-bottom: 10px;
}
.submenu>ul>li>a:hover{
    color:gray;
    cursor:pointer;
}

/* Navbar for phones */
.btn-holder,
.phone-btn{
    display:flex;
    position: absolute;
    top:-1000px;
}
.phone-btn{
    display:flex;
    color:white;
    font-size: 30px;
    height:40px;
    overflow: hidden;
}
.btn-holder>.title{
    display:flex;
    color:white;
    align-items: center;
    width:100%;
    justify-content: center;
    font-size: 20px;
}

/* For small/phone screens */
@media screen and (max-width: 470px) {
    /* Navbar */
    .navbar{
        font-size: 25px;
        position: absolute;
        top:-1000px;
        width:100%;
        transition: all 0.3s ease;
    }
    .navbar.show{
        top:40px;
        transition: all 0.3s ease;
    }
    .navbar .links{
        display:flex;
        flex-direction: column;
        width:100%;
    }
    .navbar .links>li,
    .navbar .links>li>a,
    .navbar .links>li>.link{
        display:flex;
        width:100%;
    }

    /* Phone button */
    .btn-holder{
        display: flex;
        position: relative;
        top:0;
        width:100%;
        height:50px;
        background: black;
        z-index:1;
    }
    .phone-btn{
        display: flex;
        position: absolute;
        top:0;
        right:0;
        padding: 9px 10px;
    }
    .phone-btn #bar{
        position: relative;
        opacity: 1;
    }
    .phone-btn #cross{
        opacity: 0;
        position: absolute;
    }
    .phone-btn:hover{
        cursor:pointer;
    }
    .phone-btn.close{
        padding-top:6px;
        font-size: 35px;
    }
    .phone-btn.close #bar{
        opacity: 0;
        position: absolute;
    }
    .phone-btn.close #cross{
        opacity: 1;
        position: relative;
    }

    /* submenu */
    .navbar .links>li{
        display:flex;
        flex-direction: column;
    }
    .submenu>ul{
        padding:0;
        display: flex;
        flex-direction: column;
        width:100%;
    }
    .submenu.show{
        font-size: 20px;
        z-index: 0;
        position: relative;
        padding:0;
        margin:0;
    }
    .submenu>ul>li{
        width:100%;
    }
    .submenu>ul>li>a{
        width:100%;
        padding: 7px 50px;
    }
}


/* main content */

.container{
    position: relative;
    display:flex;
    flex-direction: column;
    z-index:0;
    width:80%;
    margin-left: 10%;
    margin-top: 30px;
    align-items: center;
}
.introduction{
    font-size: 20px;
    display: flex;
    background: rgb(63, 185, 255);
    border-radius: 20px;
    padding: 15px 20px;
}

/* Carousel */
.carousel{
    position: relative;
    display: flex;
    margin-top: 30px;
    width:60%;
    height:300px;
}
.carousel>.items{
    position: relative;
    display: flex;
    width:100%;
    height:100%;
}
.carousel .item{
    position: relative;
    display:none;
    opacity:0;
}
.carousel .item.show{
    position: relative;
    opacity: 1;
    font-size: 50px;
    display:flex;
    width:100%;
    height:100%;
    align-items: center;
    justify-content: center;
}
.carousel>.buttons{
    position: absolute;
    height:40px;
    width: 100%;
    bottom: 0;
    left:0;
    text-align: center;
    align-items: center;
    padding-top:10px;
}
.carousel .button{
    display:inline-block;
    width:15px;
    height:15px;
    background: black;
    margin: 0 5px;
    border-radius: 50%;
    opacity: 0.2;
}
.carousel .button:hover{
    cursor: pointer;
}
.carousel .button.selected{
    opacity:0.5;
}
.carousel .arrows{
    position: absolute;
    display: flex;
    flex-direction: row;
    width:100%;
    height:100%;
}
.carousel .right-arrow-container{
    margin-left: auto;
    padding-right: 40px;
}
.carousel .left-arrow-container{
    width:100%;
    padding-left: 40px;
}
.carousel .right-arrow-container,
.carousel .left-arrow-container{
    display:flex;
    font-size:50px;
    align-items: center;
}
.carousel .right-arrow-container #right-arrow,
.carousel .left-arrow-container #left-arrow{
    opacity:0.3;
}
.carousel .right-arrow-container #right-arrow:hover,
.carousel .left-arrow-container #left-arrow:hover{
    opacity:0.8;
    cursor:pointer;
}

/* footer */
footer{
    margin-top:auto;
    display:flex;
    background:gray;
}

